; ModuleID = '/home/carl/AnghaBench/vlc/modules/misc/playlist/extr_xspf.c_input_xml.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/misc/playlist/extr_xspf.c_input_xml.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8* (i32*)*)* @input_xml to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @input_xml(i32* %0, i8* (i32*)* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8* (i32*)*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* (i32*)* %1, i8* (i32*)** %5, align 8
  %8 = load i8* (i32*)*, i8* (i32*)** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i8* %8(i32* %9)
  store i8* %10, i8** %6, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %20

14:                                               ; preds = %2
  %15 = load i8*, i8** %6, align 8
  %16 = call i8* @vlc_xml_encode(i8* %15)
  store i8* %16, i8** %7, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @free(i8* %17)
  %19 = load i8*, i8** %7, align 8
  store i8* %19, i8** %3, align 8
  br label %20

20:                                               ; preds = %14, %13
  %21 = load i8*, i8** %3, align 8
  ret i8* %21
}

declare dso_local i8* @vlc_xml_encode(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
